// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO $backgroundblack for igual a false 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: #23242a;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO $backgroundblack for igual a true 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: #F7F5F2;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles Content DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  position: fixed;
  width: 100%;
  height: 100%;
  margin-top: 116px;
  margin-bottom: 70px;
  overflow-y: auto;
}

<div>
  <div
    class="c0"
  />
</div>
`;
